--- a/portfolio/src/main/webapp/index_style.css
+++ b/portfolio/src/main/webapp/index_style.css
@@ -1,9 +1,15 @@
 #content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 1440px;
 }
 
-#greeting-container {
-  margin-top: 20px;
+#header {
+    background-color: white;
+    color: black;
+}
+
+#links {
+    float: right;
+    font-size: smaller;
 }
