--- a/portfolio/src/main/webapp/index_style.css
+++ b/portfolio/src/main/webapp/index_style.css
@@ -1,9 +1,3 @@
-#content {
-  margin-left: 0px;
-  margin-right: 0px;
-  width: 1440px;
-}
-
 #header {
     background-color: white;
     color: black;
@@ -11,5 +5,26 @@
 
 #links {
     float: right;
-    font-size: smaller;
+    font-size: 20px;
+}
+
+#content {
+  margin-left: 0px;
+  margin-right: 0px;
+  width: auto;
+  height: 900px;
+  background-image: url('photos/hawaii.jpeg');
+  color:white;
+  font-size: 35px;
+  align-items: center;
+}
+
+#menu {
+    color: white;
+    margin-left: 50px;
+}
+
+#about {
+    text-align: center;
+    font-size: 25px;
 }
