--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,6 +8,15 @@
   margin-top: 20px;
 }
 
+#infoContent { /* # with id gets applied only to section on html file with ID*/
+    font-family: sans-serif;
+    word-spacing: 2px;
+    margin-left: auto; /* auto ensures that content fits any type of screen. varying the width with automatically vary the left and right margins */
+    margin-right: auto;
+    width: 810px;
+    line-height: 2;
+}
+
 /* Toya: Center content of info page, first the header. 
 **/
 h2 {
