--- a/portfolio/src/main/webapp/index_style.css
+++ b/portfolio/src/main/webapp/index_style.css
@@ -13,8 +13,7 @@
   margin-right: 0px;
   width: auto;
   height: 900px;
-  background-image: url('photos/hawaii.jpeg');
-  color:white;
+  background-image: url('photos/Central-Park.jpeg');
   font-size: 35px;
   align-items: center;
 }
@@ -27,4 +26,15 @@
 #about {
     text-align: center;
     font-size: 25px;
+    color: cornsilk;
+    text-shadow: darkslategrey;
+    height: 10em;
+    position: relative;
+}
+
+#about p {
+   margin: 0;
+   top: 50%;
+   position: relative;               
+
 }
