Formatted schedule page and added form

--- a/portfolio/src/main/webapp/sched_style.css
+++ b/portfolio/src/main/webapp/sched_style.css
@@ -7,3 +7,15 @@
     float: right;
     font-size: 20px;
 }
+
+#input-form {
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
+}
