--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,6 +4,7 @@
   width: 650px;
 }
 
+
 #header {
     background-color: white;
     color: black;
@@ -25,6 +26,11 @@
     margin-right: auto;
     width: 810px;
     line-height: 2;
+}
+
+#background {
+    width: 100%;
+    background-color: #d3e0df;
 }
 
 
